data/derived/comb/progs/unify/prog6788.ml.out
Characters 89-97:
  | false -> digitsOfInt (n / 10) @ n mod 10;;
                                    ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
